--- a/MiniProject/views/index.ejs
+++ b/MiniProject/views/index.ejs
@@ -185,7 +185,7 @@
     <% if (typeof isValid !== 'undefined') { %>
         <div class="signature">
             <h3>Signature Verification:</h3>
-            <p><%= isValid ? "The signature is valid." : "The signature is invalid." %></p>
+            <p><%= isValid ? "The signature is valid. Hence Email is sent by us" : "The signature is invalid." %></p>
         </div>
     <% } %>
 
