--- a/MiniProject/views/index.ejs
+++ b/MiniProject/views/index.ejs
@@ -130,7 +130,7 @@
 </head>
 <body>
 
-    <h1>User Names</h1>
+    <h1>Secure Data Handling: a demo</h1>
     <h3>1. Secure data storage    </h3>
 
     <form action="/add-user" method="POST">
